--- a/Website/networkGraph.html
+++ b/Website/networkGraph.html
@@ -2,21 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-  <script src="js/anychart-base.min.js"></script>
-  <script src="js/anychart-graph.min.js"></script>
-  <script src="js/anychart-data-adapter.min.js"></script>
-  <script src="js/anychart-ui.min.js"></script>
-  <script src="js/anychart-exports.min.js"></script>
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <link href="css/anychart-ui.min.css" rel="stylesheet" type="text/css">
-  <link href="css/anychart-font.min.css" rel="stylesheet" type="text/css">
-    
+      <script src="js/anychart-base.min.js"></script>
+      <script src="js/anychart-graph.min.js"></script>
+      <script src="js/anychart-data-adapter.min.js"></script>
+      <script src="js/anychart-ui.min.js"></script>
+      <script src="js/anychart-exports.min.js"></script>
+      <link href="css/styles.css" rel="stylesheet" type="text/css">
+      <link href="css/anychart-ui.min.css" rel="stylesheet" type="text/css">
+      <link href="css/anychart-font.min.css" rel="stylesheet" type="text/css">
+        
   </head>
   <body>
     <nav class="navtab">
       <ul>
-        <a>Cluster Map</a>
-        <a href="chart.html">Charts</a>
+        <a href="chart.html">Graph Charts</a>
       </ul>
     </nav>
     <div id="container"></div>
