--- a/Website/networkGraph.html
+++ b/Website/networkGraph.html
@@ -21,7 +21,7 @@
     <div id="container"></div>
     <script>
         anychart.onDocumentReady(function () {
-            anychart.data.loadJsonFile("~/json/people.json", function (data) {
+            anychart.data.loadJsonFile("json/people.json", function (data) {
             // create a chart from the loaded data
             var chart = anychart.graph(data);
             
