--- a/Website/index.html
+++ b/Website/index.html
@@ -7,7 +7,7 @@
     <title>TraceTogether Covid Cluster Map</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Yatra+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styleClusterMap.css">               
+    <link rel="stylesheet" href="css/styleClusterMap.css">               
 <body>
     <h1>TraceTogether Cluster Map</h1>
     <div id="map"></div>
