--- a/Website/chart.html
+++ b/Website/chart.html
@@ -19,6 +19,7 @@
                     <div class="header">
                         <h1>Data Charts</h1>    
                         <div class="card-header">
+                            <a href="clustermap.html">Cluster Map</a>
                             <a href="networkGraph.html">Network Graph</a>
                         </div>  
                     </div>
@@ -186,8 +187,8 @@
                     datasets: [{
                         label: "Clusters",
                         borderWidth: 0.75,
-                        borderColor: "red",
-                        backgroundColor: "transparent",
+                        borderColor: "white",
+                        backgroundColor: "#FF6384",
                         data: covidcount
                     }]
                 },
