--- a/Website/networkGraph.html
+++ b/Website/networkGraph.html
@@ -15,7 +15,8 @@
   <body>
     <nav class="navtab">
       <ul>
-        <a href="chart.html">Graph Charts</a>
+        <a href="chart.html">Charts</a>
+        <a href="clusterMap.html"> Cluster Map</a>
       </ul>
     </nav>
     <div id="container"></div>
