--- a/website/clusterMap.html
+++ b/website/clusterMap.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TraceTogether Covid Cluster Map</title>
+
+    <div class="container">
+            <div class="header">
+                <h1>TraceTogether Covid Cluster Map</h1>    
+                <div class="card-header">
+                    <a href="chart.html">Charts</a>
+                    <a href="networkGraph.html">Network Graph</a>
+                </div>  
+            </div>
+        </div>
+    </div>
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Yatra+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styleClusterMap.css">               
 <body>
-    <h1>TraceTogether Cluster Map</h1>
     <div id="map"></div>
     <script src="MapScript.js"></script>
     <script
