--- a/Website/networkGraph.html
+++ b/Website/networkGraph.html
@@ -15,6 +15,7 @@
   <body>
     <nav class="navtab">
       <ul>
+        <a href="main.html">Main Page</a>
         <a href="chart.html">Charts</a>
         <a href="clusterMap.html"> Cluster Map</a>
       </ul>
