Arrange and new particular page for website

--- a/Website/chart.html
+++ b/Website/chart.html
@@ -22,12 +22,10 @@
                             <a href="main.html">Main Page</a>
                             <a href="clustermap.html">Cluster Map</a>
                             <a href="networkGraph.html">Network Graph</a>
+                            <a href="particulars.html">Particulars</a>
                         </div>  
                     </div>
-
                     </div>
-                   
-
                     <div class = "content-container">
 
                         <div class="canvas-card1" style="position:relative; width:850px; height:500px;">
