--- a/Website/networkGraph.html
+++ b/Website/networkGraph.html
@@ -18,6 +18,7 @@
         <a href="main.html">Main Page</a>
         <a href="chart.html">Charts</a>
         <a href="clusterMap.html"> Cluster Map</a>
+        <a href="particulars.html">Particulars</a>
       </ul>
     </nav>
     <div id="container"></div>
