--- a/website/clusterMap.html
+++ b/website/clusterMap.html
@@ -15,6 +15,7 @@
                     <a href="main.html">Main Page</a>
                     <a href="chart.html">Charts</a>
                     <a href="networkGraph.html">Network Graph</a>
+                    <a href="particulars.html">Particulars</a>
                 </div>  
             </div>
             <div id="map"></div>
