--- a/website/main.html
+++ b/website/main.html
@@ -5,13 +5,14 @@
     </head>
     <body>
         <div class="container">
-            <img src = "covid.gif" class="gifimage">
+            <img src = "pics/covid.gif" class="gifimage">
             <div class="header">
                 <h1>TraceTogether Project</h1>    
                 <div class="card-header">
                     <a href="chart.html">Charts</a>
                     <a href="clusterMap.html">Cluster Map</a>
                     <a href="networkGraph.html">Network Graph</a>
+                    <a href="particulars.html">Particulars</a>
                 </div>  
             </div>
         </div>
