--- a/website/particulars.html
+++ b/website/particulars.html
@@ -4,13 +4,14 @@
 <script language="JavaScript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script language="JavaScript" type="text/javascript" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
 <link href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css" rel="stylesheet"/>
-<link rel="stylesheet" type="text/css" href="table.css">
+<link rel="stylesheet" type="text/css" href="css/table.css">
 </head>
 
 <div class="header">
     <h1>TraceTogether Infomation</h1>
     <div class="card-header">
         <a href="main.html">Main Page</a>
+        <a href="chart.html">Charts</a>
         <a href="clustermap.html">Cluster Map</a>
         <a href="networkGraph.html">Network Graph</a>
     </div>  
