--- a/Website/chart.html
+++ b/Website/chart.html
@@ -23,6 +23,7 @@
                             <a href="clustermap.html">Cluster Map</a>
                             <a href="networkGraph.html">Network Graph</a>
                             <a href="particulars.html">Particulars</a>
+                            <a href="aboutUs.html">About Us</a>
                         </div>  
                     </div>
                     </div>
