--- a/Website/networkGraph.html
+++ b/Website/networkGraph.html
@@ -19,6 +19,7 @@
         <a href="chart.html">Charts</a>
         <a href="clusterMap.html"> Cluster Map</a>
         <a href="particulars.html">Particulars</a>
+        <a href="aboutUs.html">About Us</a>
       </ul>
     </nav>
     <div id="container"></div>
