--- a/website/clusterMap.html
+++ b/website/clusterMap.html
@@ -16,6 +16,7 @@
                     <a href="chart.html">Charts</a>
                     <a href="networkGraph.html">Network Graph</a>
                     <a href="particulars.html">Particulars</a>
+                    <a href="aboutUs.html">About Us</a>
                 </div>  
             </div>
             <div id="map"></div>
