--- a/website/main.html
+++ b/website/main.html
@@ -13,6 +13,7 @@
                     <a href="clusterMap.html">Cluster Map</a>
                     <a href="networkGraph.html">Network Graph</a>
                     <a href="particulars.html">Particulars</a>
+                    <a href="aboutUs.html">About Us</a>
                 </div>  
             </div>
         </div>
