--- a/website/particulars.html
+++ b/website/particulars.html
@@ -14,6 +14,7 @@
         <a href="chart.html">Charts</a>
         <a href="clustermap.html">Cluster Map</a>
         <a href="networkGraph.html">Network Graph</a>
+        <a href="aboutUs.html">About Us</a>
     </div>  
 </div>
 <div class="containerList">
@@ -32,8 +33,6 @@
 
 <body>
     <script>
-        window.mallArray = [];
-        window.covidCountArray = [];
         var xmlhttp = new XMLHttpRequest();
         var url = "json/traceInfo.json";
         xmlhttp.open("GET", url, true);
