Final for website

--- a/Website/networkGraph.html
+++ b/Website/networkGraph.html
@@ -26,7 +26,7 @@
     <div id="info"></div>
     <script>
         anychart.onDocumentReady(function () {
-            anychart.data.loadJsonFile("json/people.json", function (data) {
+            anychart.data.loadJsonFile("json/network.json", function (data) {
             // create a chart from the loaded data
             var chart = anychart.graph(data);
             
